# deep-agents-langgraph

./: .gitignore
deep-agent/: README.md  agent.py  config.py  langgraph.json  pyproject.toml
deep-agent/prompts/: root.md
deep-agent/skills/architect/: prompt.md
deep-agent/skills/brd_formatter/: prompt.md
deep-agent/skills/requirement_collector/: SKILL.md
deep-agent/skills/uiux_designer/: prompt.md
deep-agent/tools/: __init__.py  discover_skills.py  generate_csv.py  generate_docx.py  generate_html.py  generate_image.py  generate_pdf.py
deep-agent/utils/: __init__.py  skill_loader.py  skill_parser.py
