[project]
name = "ba-deep-agent-v2"
version = "0.2.0"
description = "BA Deep Agent V2 - Skills Discovery Pattern with dynamic subagent creation"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.2.6",
    "langgraph-cli[inmem]>=0.1.55",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "fpdf2>=2.7.0",
    "python-docx>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "langchain-groq>=1.1.1",
    "google-genai>=1.57.0",
]


[project.optional-dependencies]
dev = [
    "ruff>=0.6.1",
    "mypy>=1.11.1",
]


[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["skills", "tools"]


[tool.setuptools.package-data]
"*" = ["*.md", "py.typed"]
